[gd_scene load_steps=6 format=3 uid="uid://d22uei2280vaj"]

[ext_resource type="Script" uid="uid://cxf1yem6tnnoj" path="res://high_level_ui.gd" id="1_cx167"]
[ext_resource type="Texture2D" uid="uid://dpblc76cs3qtm" path="res://Menu/Spr_menu.png" id="1_uubjt"]
[ext_resource type="Texture2D" uid="uid://b85aik38uyfmk" path="res://Menu/btn_join.png" id="2_ylpcl"]
[ext_resource type="Texture2D" uid="uid://b1l4rbn4801ei" path="res://Menu/btn_host.png" id="3_cx167"]
[ext_resource type="Texture2D" uid="uid://c27vt62gjsv04" path="res://Menu/Placeholder.png" id="5_dolsu"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cx167")

[node name="SprMenu" type="Sprite2D" parent="."]
position = Vector2(573, 321)
scale = Vector2(1.8253968, 1.8571428)
texture = ExtResource("1_uubjt")

[node name="VboxHost" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0034722222
anchor_top = -0.118827164
anchor_right = -0.0034722222
anchor_bottom = -0.118827164
offset_left = 494.0
offset_top = 154.0
offset_right = 620.0
offset_bottom = 196.0
pivot_offset = Vector2(86, 46)
metadata/_edit_use_anchors_ = true

[node name="BtnHost" type="Sprite2D" parent="VboxHost"]
position = Vector2(63.000004, 21.000008)
scale = Vector2(5.8, 5.8)
texture = ExtResource("3_cx167")

[node name="btn_host" type="Button" parent="VboxHost/BtnHost"]
modulate = Color(0.59607846, 0.91764706, 0.90588236, 0.24705882)
clip_children = 2
anchors_preset = -1
anchor_top = -0.017241478
anchor_bottom = -0.017241478
offset_left = -29.655172
offset_top = -10.000001
offset_right = 30.344835
offset_bottom = 9.999999
mouse_filter = 1
action_mode = 0
metadata/_edit_use_anchors_ = true

[node name="VboxInputHost" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 381.0
offset_top = 162.0
offset_right = 727.0
offset_bottom = 196.0

[node name="Sprite2D" type="Sprite2D" parent="VboxInputHost"]
position = Vector2(172, 14)
scale = Vector2(5.8, 1.625)
texture = ExtResource("5_dolsu")

[node name="PortInput" type="LineEdit" parent="VboxInputHost"]
layout_mode = 2
text = "42069"
placeholder_text = "Digite a porta"
alignment = 1

[node name="VBoxNome" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 381.0
offset_top = 198.0
offset_right = 727.0
offset_bottom = 248.0

[node name="PlaceholderNome" type="Sprite2D" parent="VBoxNome"]
position = Vector2(172, 14)
scale = Vector2(5.8, 1.625)
texture = ExtResource("5_dolsu")

[node name="InputNome" type="LineEdit" parent="VBoxNome"]
layout_mode = 2
placeholder_text = "Digite seu nome"
alignment = 1
max_length = 20

[node name="ServidoresContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 381.0
offset_top = 297.0
offset_right = 730.0
offset_bottom = 500.0

[node name="ServidoresTitle" type="Label" parent="ServidoresContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üåê Servidores Dispon√≠veis"
horizontal_alignment = 1

[node name="ServerList" type="ItemList" parent="ServidoresContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
allow_reselect = true

[node name="BtnRefresh" type="Button" parent="ServidoresContainer"]
layout_mode = 2
text = "üîÑ Atualizar"

[node name="RankingContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 850.0
offset_top = 100.0
offset_right = 1100.0
offset_bottom = 350.0

[node name="RankingTitle" type="Label" parent="RankingContainer"]
layout_mode = 2
text = "üèÜ RANKING üèÜ"
horizontal_alignment = 1

[node name="RankingList" type="VBoxContainer" parent="RankingContainer"]
layout_mode = 2

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="pressed" from="VboxHost/BtnHost/btn_host" to="." method="_on_btn_host_pressed"]
